WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
163922
REGRESSION (
r207754
): LayoutTest http/tests/security/svg-image-with-css-cross-domain.html is a flaky failure
https://bugs.webkit.org/show_bug.cgi?id=163922
Summary
REGRESSION (r207754): LayoutTest http/tests/security/svg-image-with-css-cross...
Ryan Haddad
Reported
2016-10-24 16:52:18 PDT
LayoutTest http/tests/security/svg-image-with-css-cross-domain.html is a flaky failure
https://build.webkit.org/builders/Apple%20El%20Capitan%20Debug%20WK2%20(Tests)/builds/9047
https://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=http%2Ftests%2Fsecurity%2Fsvg-image-with-css-cross-domain.html
Attachments
Archive of layout-test-results from webkit-cq-01
(984.91 KB, application/zip)
2016-10-27 15:27 PDT
,
WebKit Commit Bot
no flags
Details
Patch
(8.56 KB, patch)
2016-10-28 05:49 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews122 for ios-simulator-wk2
(7.06 MB, application/zip)
2016-10-28 07:19 PDT
,
Build Bot
no flags
Details
Patch
(7.65 KB, patch)
2016-10-28 07:23 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch
(7.21 KB, patch)
2016-10-28 08:02 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Ryan Haddad
Comment 1
2016-10-26 15:20:27 PDT
***
Bug 164029
has been marked as a duplicate of this bug. ***
Ryan Haddad
Comment 2
2016-10-27 09:55:13 PDT
This seems to have started after
https://trac.webkit.org/changeset/207754
WebKit Commit Bot
Comment 3
2016-10-27 15:27:32 PDT
The commit-queue just saw http/tests/security/svg-image-with-css-cross-domain.html flake (image diff) while processing
attachment 293060
[details]
on
bug 163995
. Bot: webkit-cq-01 Port: <class 'webkitpy.common.config.ports.MacPort'> Platform: Mac OS X 10.10.5
WebKit Commit Bot
Comment 4
2016-10-27 15:27:33 PDT
Created
attachment 293068
[details]
Archive of layout-test-results from webkit-cq-01
Ryan Haddad
Comment 5
2016-10-27 16:00:40 PDT
I cannot cleanly revert the change, so I have marked the test as flaky on mac in
http://trac.webkit.org/projects/webkit/changeset/208015
. Youenn, could you take a look?
youenn fablet
Comment 6
2016-10-28 03:22:58 PDT
(In reply to
comment #5
)
> I cannot cleanly revert the change, so I have marked the test as flaky on > mac in
http://trac.webkit.org/projects/webkit/changeset/208015
. > > Youenn, could you take a look?
Thanks for spotting it, I'll have a look.
youenn fablet
Comment 7
2016-10-28 05:49:39 PDT
Created
attachment 293146
[details]
Patch
Build Bot
Comment 8
2016-10-28 07:19:38 PDT
Comment on
attachment 293146
[details]
Patch
Attachment 293146
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
http://webkit-queues.webkit.org/results/2392635
New failing tests: http/tests/security/svg-image-with-css-cross-domain.html
Build Bot
Comment 9
2016-10-28 07:19:42 PDT
Created
attachment 293152
[details]
Archive of layout-test-results from ews122 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews122 Port: ios-simulator-wk2 Platform: Mac OS X 10.11.6
youenn fablet
Comment 10
2016-10-28 07:22:30 PDT
(In reply to
comment #8
)
> Comment on
attachment 293146
[details]
> Patch > >
Attachment 293146
[details]
did not pass ios-sim-ews (ios-simulator-wk2): > Output:
http://webkit-queues.webkit.org/results/2392635
> > New failing tests: > http/tests/security/svg-image-with-css-cross-domain.html
Humm... this test was failing previously, sometimes due to 0.03% errors, sometimes to bug fixed in this patch. It is somehow bad that we are not able to discriminate between the two cases. I'll update the patch to mark http/tests/security/svg-image-with-css-cross-domain.html as failing on iOS :(
youenn fablet
Comment 11
2016-10-28 07:23:54 PDT
Created
attachment 293153
[details]
Patch
youenn fablet
Comment 12
2016-10-28 07:25:10 PDT
(In reply to
comment #11
)
> Created
attachment 293153
[details]
> Patch
Patch no longer contains the change to iOS test expectation, meaning that svg-image-with-css-cross-domain.html is still marked as failing on iOS
youenn fablet
Comment 13
2016-10-28 08:02:32 PDT
Created
attachment 293160
[details]
Patch
Alex Christensen
Comment 14
2016-10-28 09:17:32 PDT
Comment on
attachment 293153
[details]
Patch r=me, could you add a similar test for images?
youenn fablet
Comment 15
2016-10-28 10:38:10 PDT
Thanks for the review. (In reply to
comment #14
)
> Comment on
attachment 293153
[details]
> Patch > > r=me, could you add a similar test for images?
There are some tests doing it already, like for CSS. The issue was that they were not exercising the use of m_data. For images, I'll check how m_data is used in CachedImage and see whether I can add a test. Even if m_data is not used now, it may stil be in the future, so the change for CachedImage is good anyway.
WebKit Commit Bot
Comment 16
2016-10-29 06:49:46 PDT
Comment on
attachment 293153
[details]
Patch Clearing flags on attachment: 293153 Committed
r208102
: <
http://trac.webkit.org/changeset/208102
>
WebKit Commit Bot
Comment 17
2016-10-29 06:49:50 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug