REGRESSION (r207754): LayoutTest http/tests/security/svg-image-with-css-cross-domain.html is a flaky failure https://bugs.webkit.org/show_bug.cgi?id=163922

Patch by Youenn Fablet <youenn@apple.com> on 2016-10-29
Reviewed by Alex Christensen.

Source/WebCore:

Test: http/tests/security/cached-svg-image-with-css-cross-domain.html

Raw data was not copied in cloned CachedCSSStyleSheet while it is used by some of its clients.
Updated CachedCSSStyleSheet and CachedImage cloning to copy its raw data.

* loader/cache/CachedCSSStyleSheet.cpp:
(WebCore::CachedCSSStyleSheet::setBodyDataFrom):
* loader/cache/CachedImage.cpp:
(WebCore::CachedImage::setBodyDataFrom):
* loader/cache/CachedResource.h:
(WebCore::CachedResource::mayTryReplaceEncodedData):

LayoutTests:

* http/tests/security/cached-svg-image-with-css-cross-domain-expected.html: Added.
* http/tests/security/cached-svg-image-with-css-cross-domain.html: Added.
* platform/mac/TestExpectations:

Canonical link: https://commits.webkit.org/181884@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@208102 268f45cc-cd09-0410-ab3c-d52691b4dbfc