Source/WebCore/loader/cache/CachedCSSStyleSheet.cpp
@@ -92,6 +92,8 @@ void CachedCSSStyleSheet::setBodyDataFrom(const CachedResource& resource)
     ASSERT(resource.type() == type());
     const CachedCSSStyleSheet& sheet = static_cast<const CachedCSSStyleSheet&>(resource);
 
+    CachedResource::setBodyDataFrom(resource);
+
     m_decoder = sheet.m_decoder;
     m_decodedSheetText = sheet.m_decodedSheetText;
     if (sheet.m_parsedStyleSheetCache)
